--- a/styles_calculadora.css
+++ b/styles_calculadora.css
@@ -2,12 +2,15 @@
 
 body{
     background: linear-gradient(#ee424e, #121e6c);
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: 'Montserrat', sans-serif;
     color: #121e6c;
+
 
 }
 
@@ -79,7 +82,7 @@ input:checked + label{
     color: #ffffff;
 }
 
-#tarifa-estandard, #tarifa-plana1, #tarifa-plana2, #rete-renta{
+#tarifa-estandard, #tarifa-plana1, #tarifa-plana2, #tarifa-plana3, #rete-renta{
     display: none;
 }
 
@@ -123,6 +126,11 @@ input:checked + label{
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
     margin: 20px;
+}
+
+footer {
+    color:#f1f2f6;
+    background-color: #121e6c9c;
 }
 
 @media (max-width:360px){
