--- a/styles_calculadora.css
+++ b/styles_calculadora.css
@@ -94,7 +94,7 @@ input:checked + label {
 #seleccionar-impuesto-reterenta h4 {
     font-weight: normal;
     font-size: 13px;
-    
+    margin-top: 18px;
 }
 
 .ingresar-reteica {
@@ -104,7 +104,8 @@ input:checked + label {
     background-color: #f1f2f6;
     font-size: 20px;
     font-weight: normal;
-    width: 80px;
+    width: 110px;
+    height: 50px;
     box-sizing: border-box;
 }
 
