--- a/styles_calculadora.css
+++ b/styles_calculadora.css
@@ -1,3 +1,38 @@
+* {
+    box-sizing: border-box;
+}
+header {
+    width: 100%;
+    padding: 10px 100px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #121e6c9e;
+}
+
+header ul {
+    list-style: none;
+}
+
+header li {
+    display: inline-block;
+    margin: 5px;
+}
+header a {
+    font-size: 17px;
+    display: inline-block; /* Para que el enlace se ajuste al ancho del contenido */
+    padding: 8px 12px; 
+    border: 1px solid white; 
+    text-decoration: none; 
+    color: #f1f2f6;
+    transition: all 0.3s ease;
+}
+
+header a:hover {
+    background-color: #f0f0f065; 
+  }
+
 body {
     background: linear-gradient(#ee424e, #121e6c);
     background-repeat: no-repeat;
@@ -7,11 +42,18 @@ body {
     align-items: center;
     font-family: montserrat, Arial,Helvetica,sans-serif;
     color: #121e6c;
-
+    margin: 0;
 
 }
 
-div {
+.titulo {
+    color:#ffffff;
+    font-size: 30px;
+    font-weight: bold;
+    flex: 1;
+}
+
+div, #facturacion{
     background-color: white;
     width: 600px;
     height: 800px;
@@ -20,6 +62,7 @@ div {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0px 0px 50px 0px;
     
 }
 
@@ -27,12 +70,6 @@ h5 {
     font-weight: normal;
 }
 
-
-.titulo {
-    color:#ffffff;
-    font-size: 40px;
-    font-weight: bold;  
-}
 
 .ingresar-venta {
     padding: 10px 20px;
