--- a/styles_calculadora.css
+++ b/styles_calculadora.css
@@ -53,21 +53,9 @@ body {
     flex: 1;
 }
 
-div, #facturacion{
-    background-color: white;
-    width: 600px;
-    height: 800px;
-    border-radius: 24px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 0px 0px 50px 0px;
-    
-}
-
-h5 {
+h5, h4 {
     font-weight: normal;
+    font-size: 13px;
 }
 
 
@@ -75,7 +63,7 @@ h5 {
     padding: 10px 20px;
     border: 0px;
     border-radius: 10px;
-    background-color: #f1f2f6;
+    background-color: #d6d8df;
     font-size: 25px;
     margin: -10px 0px 14px 0px;
     text-align: center;
@@ -129,8 +117,6 @@ input:checked + label {
 }
 
 #seleccionar-impuesto-reterenta h4 {
-    font-weight: normal;
-    font-size: 13px;
     margin-top: 18px;
 }
 
@@ -138,7 +124,7 @@ input:checked + label {
     padding: 10px 10px;
     border: 0px;
     border-radius: 10px;
-    background-color: #f1f2f6;
+    background-color: #d6d8df;
     font-size: 20px;
     font-weight: normal;
     width: 110px;
@@ -151,20 +137,14 @@ input:checked + label {
      
 }
 
-#seleccionar-impuesto-reteica h4{
-    font-weight: normal;
-    font-size: 13px;
-     
-}
-
 #titulo-impuesto {
     margin: 0px 0px -12px 0px;
 }
 
-.boton {
+.boton-calcular, .boton-reiniciar {
     color: white;
     width: 180px;
-    height: 72px;
+    height: 44px;
     background-color: #ee424e;
     border-radius: 30px;
     margin: 50px;
@@ -172,12 +152,58 @@ input:checked + label {
     font-weight: bold;
 }
 
-#resultado-programa {
-    font-weight: normal;
-    font-size: 20px;
-    margin: 20px;
+div, #facturacion{
+    background-color: white;
+    width: 600px;
+    height: 800px;
+    border-radius: 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0px 0px 50px 0px;
+    
 }
 
+#facturacion h2 {
+    margin: 55px 0px 0px 0px
+}
+
+#facturacion h4 {
+    margin: 5px 0px 30px 0px;
+}
+
+#botones {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    height: 50px;
+    margin-bottom: 20px;
+}
+
+#resultado-programa {
+    font-weight: normal;
+    font-size: 18px;
+    margin: 20px;
+    width: 100%;
+    height: 392px;
+}
+
+#contenedor-respuesta{
+    margin: 20px;
+    width: 90%;
+    display: flex;
+    justify-content: flex-start;
+    text-align: center;
+}
+#contenedor-respuesta h2{
+    margin-top: 50px;
+}
+
+#contenedor-respuesta p{
+    margin: 5px;
+}
 footer {
     color:#f1f2f6;
     background-color: #121e6c9c;
