--- a/styles_calculadora.css
+++ b/styles_calculadora.css
@@ -152,6 +152,14 @@ input:checked + label {
     font-weight: bold;
 }
 
+#resultado-programa {
+    font-weight: normal;
+    font-size: 18px;
+    margin: 20px;
+    width: 100%;
+    height: 392px;
+}
+
 div, #facturacion{
     background-color: white;
     width: 600px;
@@ -173,6 +181,12 @@ div, #facturacion{
     margin: 5px 0px 30px 0px;
 }
 
+#section-comision, #section-iva {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #botones {
     display: flex;
     flex-direction: row;
@@ -182,13 +196,12 @@ div, #facturacion{
     margin-bottom: 20px;
 }
 
-#resultado-programa {
-    font-weight: normal;
-    font-size: 18px;
-    margin: 20px;
-    width: 100%;
-    height: 392px;
+#link-template{
+    margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: bold;
 }
+
 
 #contenedor-respuesta{
     margin: 20px;
@@ -204,6 +217,13 @@ div, #facturacion{
 #contenedor-respuesta p{
     margin: 5px;
 }
+
+#template{
+    margin: 20px;
+    width: 80%;
+    text-align: justify;
+}
+
 footer {
     color:#f1f2f6;
     background-color: #121e6c9c;
